# TootegaWinTools

./: .gitattributes  .gitignore  .gitmodules  .vscodeignore  README.md  TootegaWinTools.slnx
.github/: copilot-instructions.md
7ZipShell/: Install.ps1  LICENSE  README.md  Uninstall.ps1
7ZipShell/Installer/: Build-Installer.ps1  Product.wxs  Setup.cpp  Setup.manifest  Setup.rc  SevenZipViewInstaller.wixproj  SevenZipViewSetup.vcxproj
7ZipShell/Installer/Resources/: License.rtf
7ZipShell/SevenZipView/: CMakeLists.txt  SevenZipView.def  SevenZipView.vcxproj  SevenZipView.vcxproj.filters
7ZipShell/SevenZipView/include/: Archive.h  ArchiveEntry.h  Common.h  ContextMenu.h  Extractor.h  IconHandler.h  PasswordDialog.h  PreviewHandler.h  PropertyHandler.h  ShellFolder.h
7ZipShell/SevenZipView/resources/: SevenZipView.rc
7ZipShell/SevenZipView/src/: DllMain.cpp
7ZipShell/SevenZipView/src/Core/: Archive.cpp
7ZipShell/SevenZipView/src/Shell/: ContextMenu.cpp  Extractor.cpp  IconHandler.cpp  PasswordDialog.cpp  PreviewHandler.cpp  PropertyHandler.cpp  ShellFolder.cpp
7ZipShell/Tools/: GenerateIcons.ps1
SQLLocalDB/: .gitignore  Build.ps1  CMakeLists.txt  CMakeSettings.json  Install.ps1  LICENSE  README.md  SQLLocalDBView.def  SQLLocalDBView.vcxproj  Test-Debug.ps1  Uninstall.ps1
SQLLocalDB/Installer/: SQLLocalDBViewSetup.vcxproj  Setup.cpp  Setup.manifest  Setup.rc
SQLLocalDB/include/: Common.h  ContextMenu.h  Database.h  IconHandler.h  PreviewHandler.h  PropertyHandler.h  ShellFolder.h
SQLLocalDB/resources/: SQLLocalDBView.rc  resource.h
SQLLocalDB/src/: DllMain.cpp
SQLLocalDB/src/ContextMenu/: ContextMenu.cpp
SQLLocalDB/src/Core/: Database.cpp
SQLLocalDB/src/Icon/: IconHandler.cpp
SQLLocalDB/src/Preview/: PreviewHandler.cpp
SQLLocalDB/src/Property/: PropertyHandler.cpp
SQLLocalDB/src/Shell/: ShellFolder.cpp
SQLiteShell/: Install.ps1  README.md  RegisterDebug.ps1  Uninstall.ps1
SQLiteShell/Installer/: Package.wxs  Product.wxs  SQLiteViewInstaller.wixproj  SQLiteViewSetup.vcxproj  Setup.cpp  Setup.rc
SQLiteShell/SQLiteView/: CMakeLists.txt  README.md  SQLiteView.def  SQLiteView.vcxproj  SQLiteView.vcxproj.filters
SQLiteShell/SQLiteView/include/: Common.h  ContextMenu.h  Database.h  DatabaseEntry.h  IconHandler.h  PreviewHandler.h  PropertyHandler.h  ShellFolder.h
SQLiteShell/SQLiteView/resources/: SQLiteView.rc
SQLiteShell/SQLiteView/sqlite3/: README.md
SQLiteShell/SQLiteView/src/: DllMain.cpp
SQLiteShell/SQLiteView/src/Core/: Database.cpp
SQLiteShell/SQLiteView/src/Shell/: ContextMenu.cpp  IconHandler.cpp  PreviewHandler.cpp  PropertyHandler.cpp  ShellFolder.cpp
SQLiteShell/assets/: README.md
SQLiteView/: .gitignore  Build.ps1  CMakeLists.txt  DownloadSQLite.ps1  Install.ps1  README.md  SQLiteView.vcxproj  SQLiteView.vcxproj.filters  Setup.ps1  Test-Debug.ps1  Uninstall.ps1
SQLiteView/include/: Common.h  ContextMenu.h  Database.h  IconHandler.h  PreviewHandler.h  PropertyHandler.h  ShellFolder.h
SQLiteView/resources/: SQLiteView.rc  resource.h
SQLiteView/src/: DllMain.cpp
SQLiteView/src/ContextMenu/: ContextMenu.cpp
SQLiteView/src/Core/: Database.cpp
SQLiteView/src/Icon/: IconHandler.cpp
SQLiteView/src/Preview/: PreviewHandler.cpp
SQLiteView/src/Property/: PropertyHandler.cpp
SQLiteView/src/Shell/: ShellFolder.cpp
TootegaVideoTool/: README.md  TootegaVideoTool.vcxproj  TootegaVideoTool.vcxproj.filters
TootegaVideoTool/Include/: Resource.h  framework.h
TootegaVideoTool/Resource/: TootegaVideoTool.rc
TootegaVideoTool/Source/: XApplication.cpp
TootegaWinLib/: README.md  TootegaWinLib.filters  TootegaWinLib.vcxproj
TootegaWinLib/Include/: TootegaWinLib.h  XCapturePipeClient.h  XCapturePipeServer.h  XCaptureProtocol.h  XCrypto.h  XElevation.h  XEventLog.h  XEventLogForensic.h  XFile.h  XGlobalEvent.h  XLogger.h  XMemory.h  XPlatform.h  XProcess.h  XRegistry.h  XResult.h  XShell.h  XString.h  XStringConversion.h  XTypes.h
TootegaWinLib/Include/Shell/: XContextMenu.h  XIconHandler.h  XPreviewHandler.h  XPropertyHandler.h  XShell.h  XShellExtension.h  XShellFolder.h  XShellRegistry.h
TootegaWinLib/Source/: XCapturePipeClient.cpp  XCapturePipeServer.cpp  XCrypto.cpp  XEventLog.cpp  XEventLogForensic.cpp  XEventLogMessages.h  XEventLogMessages.mc  XEventLogMessages.rc  XFile.cpp  XGlobalEvent.cpp  XLogger.cpp  XMemory.cpp  XProcess.cpp  XRegistry.cpp  XString.cpp  XStringConversion.cpp
TootegaWinLib/Source/Shell/: XContextMenu.cpp  XShellExtension.cpp  XShellFolder.cpp  XShellRegistry.cpp
TootegaWinMFCLib/: README.md  TootegaWinMFCLib.slnx  TootegaWinMFCLib.vcxproj  TootegaWinMFCLib.vcxproj.filters
TootegaWinMFCLib/Include/: Resource.h  TootegaWinMFCLib.h  XApplication.h  XCaptureDocument.h  XCaptureView.h  XChildFrame.h  XMainFrame.h  XPreviewPanel.h  XThumbnailStrip.h  XVideoEditorDocument.h  XVideoEditorFrame.h  XVideoEditorView.h  XVideoRecorder.h  XWindowEnumerator.h  framework.h  pch.h
TootegaWinMFCLib/Source/: XApplication.cpp  XCaptureDocument.cpp  XCaptureView.cpp  XChildFrame.cpp  XMainFrame.cpp  XPreviewPanel.cpp  XThumbnailStrip.cpp  XVideoEditorDocument.cpp  XVideoEditorFrame.cpp  XVideoEditorView.cpp  XVideoRecorder.cpp  XWindowEnumerator.cpp  pch.cpp
